# discord_mc_playercount

./: Cargo.toml  config.example.toml  readme.md
src/: main.rs
